<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userupdate">

    <LinearLayout
        android:id="@+id/li1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/li2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500">

            <ImageView
                android:id="@+id/userprofile1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:onClick="onback"
                android:src="@drawable/backarrow"
                tools:ignore="ContentDescription" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/li3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textupdate"
                android:textStyle="bold"
                android:text="@string/update"
                android:textColor="@color/purple_500"
                android:paddingStart="110dp"
                android:paddingEnd="85dp"
                android:layout_marginBottom="12dp"

                android:textSize="35dp"
                tools:ignore="SpUsage" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text2"
                android:layout_marginBottom="10dp"
                android:hint="@string/full_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/profile"
                    android:drawablePadding="10dp"
                    android:text=""/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text3"
                android:layout_marginBottom="10dp"
                android:hint="@string/email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="10dp"
                    android:text=""/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text4"
                android:layout_marginBottom="10dp"
                android:hint="@string/registered_number">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phonenumber"
                    android:drawablePadding="10dp"
                    android:text=""/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text5"
                android:layout_marginBottom="10dp"
                android:hint="@string/home">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/home_user"
                    android:drawablePadding="10dp"
                    android:text=""/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text6"
                android:layout_marginBottom="10dp"
                android:hint="@string/password">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="10dp"
                    android:text=""/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text7"
                android:layout_marginBottom="10dp"
                android:hint="@string/retype_password">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="10dp"
                    android:text=""/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_update_data"
                android:text="@string/update_data"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="15dp"
                android:onClick="updatecustomer"

                />
        </LinearLayout>


    </LinearLayout>

</ScrollView>