<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile_db">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linearmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/li1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_500">

                <ImageView
                    android:id="@+id/userprofile1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:src="@drawable/backarrow"
                    tools:ignore="ContentDescription"
                    android:onClick="onbackprofile"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relative1"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/teal_200"
                android:padding="16dp">


                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/profile1"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/retrivedname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/image1"
                    android:fontFamily="casual"
                    android:includeFontPadding="false"
                    android:text="@string/default_user"
                    android:textColor="#050505"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    tools:ignore="NotSibling" />
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/li2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:id="@+id/linear1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/profile"

                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/fullname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shape"
                        android:hint="@string/full_name"
                        android:text="@string/full_name"
                        android:textStyle="italic|bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/image3"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"

                        android:src="@drawable/email"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/useremail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shape"
                        android:hint="@string/email"
                        android:text="@string/email"
                        android:textStyle="italic|bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/image4"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"

                        android:src="@drawable/phonenumber"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/mobileno"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shape"
                        android:hint="@string/registered_number"
                        android:text="@string/mo_no"
                        android:textStyle="italic|bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/image5"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"

                        android:src="@drawable/home_user"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shape"
                        android:hint="@string/home"
                        android:text="@string/home"
                        android:textStyle="italic|bold" />


                </LinearLayout>


                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="openupdate"
                    android:text="@string/update"
                    android:textColor="@color/black"
                    tools:ignore="OnClick" />
            </LinearLayout>
            <Button
                android:id="@+id/btn_signout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#4CAF50"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="15dp"

                />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/btn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        app:itemBackground="@color/teal_200"
        app:itemIconTint="@drawable/selectordb"
        app:itemTextColor="@drawable/selectordb"
        app:menu="@menu/menudb"
        />

</RelativeLayout>